react_app/student_react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-back-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-back-react
  template:
    metadata:
      labels:
        app: student-back-react
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: student-back-react
        image: acrtest31.azurecr.io/student_react:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: student-back-react-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: student-back-react
